gl33-master/src/test/deca/context/invalid/other/stringEqInt.deca
{
    boolean b = 1 == "1";
}